--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,7 +4,7 @@
         
         {
             "name": "Launch index.html",
-            "type": "firefox",
+            "type": "chrome",
             "request": "launch",
             "url": "http://localhost:5500",
             "file": "${workspaceFolder}/index.html"
